- (FEAT) an SCM trigger that knows about /var/lib/cobbler kickstarts, snippets, and config directories, and audits them for changes
- (BUGF) update ctime on object copies
- (BUGF) fix cobbler check code that makes sure default password is not in use
- (BUGF) remove duplicate text box for management classes from server edit page

- Tue Mar 3 2009 - 1.4.3
- (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
- (BUGF) don't traceback on invalid cmd ("cobbler distro list --name=foo")
- (BUGF) fix import usage with --kickstart option (no more traceback)
- (BUGF) fix removal of images with child system objects
- (BUGF) make --rpmlist on repo use same parsing routes as the rest of cobbler
- (BUGF) default value for server override should be <<inherit>> not <inherit>
- (BUGF) ensure if virt bridge is set to "" it will apply the value from settings
- (BUGF) cobbler check should say path to config file is /etc/cobbler, not /var/lib
- (FEAT) enable cobblerweb username/pass logins when authing with spacewalk
- (BUGF) allow --kopts to take parameters that are shell quoted.
- (BUGF) allow kernel options to start with '-'
- (BUGF) prevent potential traceback when --template-file data isn't a hash
- (BUGF) set primary hostname manually in case Anaconda doesn't honor it
- (BUGF) Use shlex for parsing --kopts to allow a wider variety of kernel options
- (BUGF) prevent potential traceback when --template-file data isn't a hash
- (BUGF) anaconda doesn't honor nameserver always, set manually
- (BUGF) various post install network snippet fixes
- (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
- (SPEC) fix build for rawhide now that yaboot is included
- (BUGF) allow src and noarch arches for repo objects
- (BUGF) move to PyYAML for YAML implementation since it is better maintained
- (BUGF) fixed web-interface editing of ownership
- (BUGF) fixed web-interface editing of management classes