@@ -22,6 +22,9 @@ Cobbler CHANGELOG
 - (BUGF) update ctime on object copies
 - (BUGF) fix cobbler check code that makes sure default password is not in use
 - (BUGF) remove duplicate text box for management classes from server edit page
+- (BUGF) fix stderr output on Ctrl+C
+- (BUGF) potential performance savings WRT duplicate python objects
+- (BUGF) don't deserialize during sync, it makes it take twice as long
 
 - Tue Mar 3 2009 - 1.4.3
 - (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
